<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fi.huiningd.guaguatodo.TodoItemDetailFragment"
    android:id="@+id/todoitem_detail"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:labelFor="@+id/todo_edit_text"
    android:text="@string/task" />

<EditText
    android:id="@+id/todo_edit_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="2dp"
    android:textAppearance="?attr/textAppearanceListItem"
    android:textSize="20sp"
    android:inputType="text"
    android:imeOptions="actionNext"
    app:layout_constraintLeft_toRightOf="@id/check_box"
    tools:text="Take trash out and Take trash out " />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:text="@string/extra_info" />

<EditText
    android:id="@+id/edit_text_extra_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:imeOptions="actionDone"
    android:inputType="text"
    android:hint="@string/optional"
    android:layout_marginBottom="16dp"
    android:layout_marginEnd="16dp" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/button_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/whiteBackground"
        app:srcCompat="@android:drawable/ic_menu_my_calendar"
        android:contentDescription="@string/cd_calendar_button" />

    <TextView
        android:id="@+id/date_text_view"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="11/15/2018" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <CheckBox
        android:id="@+id/check_task_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/text_view_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/mark_task_done" />

</LinearLayout>

<LinearLayout
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/star_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/whiteBackground"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:srcCompat="@drawable/ic_star_gray"
        android:contentDescription="@string/cd_star_icon" />

    <TextView
        android:id="@+id/text_view_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/star_task" />

</LinearLayout>

<LinearLayout
    android:id="@+id/delete_task"
    android:layout_gravity="end"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/delete_task" />

    <ImageButton
        android:id="@+id/button_delete_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@color/whiteBackground"
        android:padding="2dp"
        app:srcCompat="@android:drawable/ic_menu_delete"
        android:contentDescription="@string/cd_trash_bin_icon" />

</LinearLayout>

    <TextView
        android:id="@+id/error_text_view"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:textColor="@android:color/holo_red_light"
        tools:text="Error message" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="horizontal">

    <Button
        android:id="@+id/button_cancel"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="8dp"
        android:text="@android:string/cancel" />

    <Button
        android:id="@+id/button_save"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="8dp"
        android:text="@string/save" />

</LinearLayout>

</LinearLayout>